Fix modal visibility

--- a/styles.css
+++ b/styles.css
@@ -149,6 +149,7 @@ footer {
 }
 
 .modal {
+	display: none;
 	position: fixed;
 	top: 50vh;
 	left: 50vw;
